cluster/media/jellyfin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: jellyfin
          image: cr.hotio.dev/hotio/jellyfin@sha256:ed5f240a3b272aef926f32e20d79c9a585ece818dc0823eac9c92bf08f3d142f
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
          securityContext:
            privileged: true
          resources:
            requests:
              memory: 4Gi
              cpu: 500m
            limits:
              memory: 6Gi
              cpu: 2.5
          livenessProbe:
            httpGet:
              path: /health
              port: 8096
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: media-config
        - name: media
          persistentVolumeClaim:
            claimName: media
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: werethemille.rs
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - watch.werethemille.rs
      secretName: jellyfin-tls
  rules:
    - host: watch.werethemille.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
